--- a/style.css
+++ b/style.css
@@ -10,3 +10,64 @@ body {
 }
 
 /* Add styles here! */
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 24px;
+}
+
+.intro-chunk {
+  padding-top: 96px;
+  padding-bottom: 64px;
+  max-width: 415px;
+}
+
+main {
+  background-color: hsla(0, 0%, 40%, 1);
+  padding: 64px 0;
+}
+
+header {
+  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.2;
+  margin: 0;
+  margin-bottom: 3rem;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+strong {
+  color: hsla(160, 100%, 30%, 1);
+}
+
+.card {
+  background-color: hsla(0, 0%, 100%, 1);
+  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+  padding: 24px;
+  margin: 0 -24px;
+}
+
+.indented-heading {
+  width: fit-content;
+  font-size: 1.5rem;
+  line-height: 1.2;
+  padding: 16px 32px;
+  margin-left: -32px;
+  margin-top: -16px;
+  margin-bottom: 1rem;
+  background-color: hsla(45, 100%, 50%, 1);
+  border-bottom: 8px solid hsla(45, 100%, 40%, 1);
+}
